fix image mac on tablet

--- a/app/scss/sections/_section.scss
+++ b/app/scss/sections/_section.scss
@@ -156,9 +156,9 @@
 
     &--large {
       display: block;
-      height: 680px;
+      height: 580px;
       position: relative;
-      right: -70px;
+      right: 0;
       margin-bottom: -150px;
       margin-top: 50px;
     }
